# rust-api-template

./: Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
.github/workflows/: docker-image.yml
src/: error.rs  https.rs  main.rs  metrics.rs  state.rs  tracing.rs
