[package]
name = "rust-api-template"
version = "0.0.3"
description = "Rust API Template"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = "0.1"
# base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "env", "derive"] }
env_logger = "0.10"
hyper = { version = "1", features = [] }
hyper-tls = "0.5"
init-tracing-opentelemetry = { version = "0.18", features = ["otlp","tracing_subscriber_ext"] }
log = "0.4"
opentelemetry = "0.22.0"
opentelemetry_sdk = "0.22.1"
metrics = "0.18"
metrics-exporter-prometheus = "0.9"
metrics-util = "0.12"
native-tls = "0.2"
reqwest = { version = "0.11", features = ["json","native-tls"] }
reqwest-middleware = "0.2"
reqwest-tracing = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["filter"] }
tower-http = { version = "0.5", features = ["trace"] }
url = { version = "2", features = ["serde"] }
thiserror = "1.0.59"
